chore: correct iphone position on mobile

--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -93,7 +93,6 @@
   }
 
   .iphone {
-    margin-bottom: 3em;
     animation: iphone-appearence 1s cubic-bezier(0, 0.6, 0.32, 1) 0.1s both;
   }
 }
